tests/ui/discord-frontend/entity_macro/expected_literal_9.stderr
error: expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_9.rs:38:26
   |
LL |     extra = ["extra_id": core],
   |                          ^^^^

error: aborting due to 1 previous error

